--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.0",
-    "react-toast": "^1.0.3",
     "tailwindcss": "^4.1.7",
     "zustand": "^5.0.4"
   },
